2004-05-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Install image links (backportme).

	* Documentation/user/GNUmakefile (local-install-info): Activate
	actual installing of image links (backportme).

2004-04-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Measure repeats): Removed
	unnecessary (and confusing) \context Voice{.

2004-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Mention use of \score as markup.

	* lily/page.cc (Page): Do not use ly_scheme_function for
	volatile/configurable variables (FIXME: better name).

	* lily/music-output-def.cc (c_lookup_variable): Rename (WAS:
	get_scmvar).

2004-04-29  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py (FatalConversionError.subst): use
	\transposition.

2004-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/page.hh (class Page): Declare left_margin ().

	* lily/page.cc: Remove paper var caching.

2004-04-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/music-glossary.tely: Add name to @top node.
	Remove comment from @table definitions (workaround for makinfo
	bug).

	* lily/stencil-scheme.cc (ly:stencil-expr): Rename (was:
	ly:stencil-get-expr).  Update callers.
	(ly:stencil-align-to!):  Return stencil too.

	* lily/paper-outputter.cc (output_page): Bugfix.  Use page
	stencil.  Remove looped line-based page output.
	(output_line): Use line stencil.  Remove looped stencil-based line
	output.

	* lily/page.cc (ly:page-paper-lines): New function.

	* input/test/markup-score.ly: New file.

	* scm/define-markup-commands.scm (stencil): New markup.

	* lily/book.cc (to_stencil): New method.

	* lily/parser.yy (markup): Use it to grok \score.

2004-04-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stencil.cc (expr): Rename (was: get_expr).  Update callers.

	* lily/paper-book.cc (pages): Change signature.  Update callers.

	* lily/include/page.hh:
	* lily/page.cc: New file.
