@@ -11,7 +11,6 @@
 #include "real.hh"
 #include "drul-array.hh"
 #include "interval.hh"
-#include "axes.hh"
 #include "offset.hh"
 #include "array.hh"
 #include "polynomial.hh"
